Database correction